# esp32-light-sensor

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  ssh_key  ssh_key.pub
fault-api-server/: README.md  pyproject.toml  simulate_esp32.py  test_server.py
fault-api-server/esp32_fault_api_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
main/: CMakeLists.txt  idf_component.yml  main.c  main_fault_detector.c
websocket-server/: README.md  main.py  pyproject.toml  server.py  server_with_logs.py
